[metadata]
author = jose
author_email = jose@google.com
description = My package description
long_description = file: README.md
name = bashrc
url = https://github.com/j5pu/bashrc.git
version = 0.31.90

[options]
cmdclass =
    install = rc.Install
include_package_data = True
install_requires =
    requests
packages = find:
python_requires = >= 3.9
scripts =
    scripts/bashrc
zip_safe = False

[options.entry_points]
console_scripts =
    rc = rc:app

[options.extras_require]
beta =
    bidict
dev =
    icecream
    jupyter
test =
    pytest

[options.packages.find]
exclude =
    backup
    doc
    tests
    tmp
    venv

[bumpversion]
current_version = 0.0.36
commit = True
tag = True
commit_args = -a

[bumpversion:file:pyproject.toml]

[darglint]
strictness = long
docstring_style = google

[tool:pytest]
log_level = ERROR
norecursedirs = *.egg .eggs dist build docs .tox .git __pycache__ backup scripts bapy/templates/
doctest_optionflags = NUMBER NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
filterwarnings =
    ignore:please use dns.resolver.resolve\(\) instead:DeprecationWarning
    ignore:invalid escape sequence \\:DeprecationWarning
addopts = 
    --ignore-glob */backup/*
    --ignore-glob */data/*
    --ignore-glob */debug/*
    --ignore-glob */examples/*
    --strict-markers
    --tb=auto
    -rA
    --doctest-modules
    --doctest-continue-on-failure
